# anaconda-cc

./: .gitignore  README.md  main.py  pyproject.toml
app/game/: models.py  router.py  schema.py  services.py
app/game/core/: element.py  game.py  history.py  paper.py  play.py  player.py  rock.py  schema.py  scissor.py
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/: App.vue
frontend/src/api/: client.ts  index.ts  interface.ts  provider.ts
frontend/src/components/: CurrentGame.vue  NewGame.vue  NewPlayer.vue
frontend/src/router/: index.ts
frontend/src/views/: AboutView.vue  GameView.vue  HomeView.vue
static/: index.html
